Update and rename gimnasio.html to index.html

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     <h3>Reserva de actividades</h3>
                 </legend><br>
                 <label for="nombre">Nombre:&nbsp</label>
-                <input type="text" id="nombre" name="nombre" max="70"><br>
+                <input type="text" id="nombre" name="nombre" title="El nombre incluíra solo letras mayúsculas, minúsculas y espacios en blanco con una longitud mínima de 8 carácteres" max="70"><br>
                 <span class="info_nombre" id="info_nombre"></span><br>
                 Actividades&nbsp:<br>
                 <input type="checkbox" name="actividad" value="Crossfit">Crossfit
