--- a/index.html
+++ b/index.html
@@ -17,26 +17,28 @@
         <main>
             <div class="contenedor_formulario">
                 <form name="gimnasio">
-                    <span id="mensaje">De forma temporal la actividad Capoeira no se encuentra disponible</span>
                     <legend>
                         <h3>Reserva de actividades</h3>
                     </legend><br>
                     <label for="nombre">Nombre:&nbsp</label>
-                    <input type="text" id="nombre" name="nombre" title="Puede contener solo letras mayúsculas y minúsculas sin espacios y sin caracteres especiales con una longitud mínima de 8 caracteres" placeholder="nickname" max="70"><br>
+                    <input type="text" id="nombre" name="nombre" title="Solo puede contener letras mayúsculas, minúsculas y sin carácteres especiales" placeholder="nickname" max="70"><br>
                     <span class="info_nombre" id="info_nombre"></span><br><br>
-                    Actividades (máximo 2 actividades)&nbsp:<br>
-                    <input type="checkbox" name="actividad" value="Spinning">Pilates
-                    <input type="checkbox" name="actividad" value="Spinning">Yoga
-                    <input type="checkbox" name="actividad" value="Spinning">Spinning
-                    <input type="checkbox" name="actividad" value="Crossfit">Crossfit
-                    <input type="checkbox" name="actividad" value="BodyPump">BodyPump<br>
-                    Artes marciales:&nbsp
-                    <input type="checkbox" name="actividad" value="Capoeira">Capoeira
-                    <input type="checkbox" name="actividad" value="Taekwondo">Taekwondo
-                    <input type="checkbox" name="actividad" value="Muay thai">Muay thai
-                    <input type="checkbox" name="actividad" value="Krav maga">Krav maga
-                    <input type="checkbox" name="actividad" value="Boxeo">Boxeo
-                    <input type="checkbox" name="actividad" value="MMA">MMA<br>
+                    Actividades&nbsp:
+                    <select id="actividad">
+                        <option value="Pilates">Pilates</option>
+                        <option value="Yoga">Yoga</option>
+                        <option value="Spinning">Spinning</option>
+                        <option value="Crossfit">Crossfit</option>
+                        <option value="BodyPump">BodyPump</option>
+                        <optgroup label="Artes marciales">
+                            <option value="Capoeira">Capoeira</option>
+                            <option value="Taekwondo">Taekwondo</option>
+                            <option value="Muay thai">Muay thai</option>
+                            <option value="Krav maga">Krav maga</option>
+                            <option value="Boxeo">Boxeo</option>
+                            <option value="MMA">MMA</option>
+                        </optgroup>
+                    </select><br>
                     <span class="info_actividad" id="info_actividad"></span><br><br>
                     <label for="fecha">Fecha reserva:&nbsp</label>
                     <input type="date" id="fecha" name="fecha"><br>
@@ -58,3 +60,4 @@
             </div>
         </footer>
     </body>
+</html>
